--- a/sales.html
+++ b/sales.html
@@ -55,32 +55,32 @@ layout: page
                      <div class="holderCircle">
                         <div class="round"></div>
                         <div class="dotCircle">
-                           <span class="itemDot active itemDot1" data-tab="1">
+                           <span class="itemDot active itemDot1" data-tab="1" data-img="1">
                            1
                            <!-- <i class="ion-ios-timer-outline"></i> -->
                            <span class="forActive"></span>
                            </span>
-                           <span class="itemDot itemDot2" data-tab="2">
+                           <span class="itemDot itemDot2" data-tab="2" data-img="2">
                            2
                            <!-- <i class="ion-ios-chatboxes-outline"></i> -->
                            <span class="forActive"></span>
                            </span>
-                           <span class="itemDot itemDot3" data-tab="3">
+                           <span class="itemDot itemDot3" data-tab="3" data-img="3">
                            3
                            <!-- <i class="ion-ios-person-outline"></i> -->
                            <span class="forActive"></span>
                            </span>
-                           <span class="itemDot itemDot4" data-tab="4">
+                           <span class="itemDot itemDot4" data-tab="4" data-img="4">
                            4
                            <!-- <i class="ion-ios-pricetags-outline"></i> -->
                            <span class="forActive"></span>
                            </span>
-                           <span class="itemDot itemDot5" data-tab="5">
+                           <span class="itemDot itemDot5" data-tab="5" data-img="5">
                            5
                            <!-- <i class="ion-ios-upload-outline"></i> -->
                            <span class="forActive"></span>
                            </span>
-                           <span class="itemDot itemDot6" data-tab="6">
+                           <span class="itemDot itemDot6" data-tab="6" data-img="6">
                            6
                            <!-- <i class="ion-ios-briefcase-outline"></i> -->
                            <span class="forActive"></span>
