--- a/support.html
+++ b/support.html
@@ -53,64 +53,64 @@ layout: page
                      <div class="holderCircle">
                         <div class="round"></div>
                         <div class="dotCircle">
-                           <span class="itemDot active itemDot7" data-tab="7">
+                           <span class="itemDot active itemDot7" data-img="7" data-tab="1">
                            1
                            <!-- <i class="ion-ios-timer-outline"></i> -->
                            <span class="forActive"></span>
                            </span>
-                           <span class="itemDot itemDot8" data-tab="8">
+                           <span class="itemDot itemDot8" data-img="8" data-tab="2">
                            2
                            <!-- <i class="ion-ios-chatboxes-outline"></i> -->
                            <span class="forActive"></span>
                            </span>
-                           <span class="itemDot itemDot9" data-tab="9">
+                           <span class="itemDot itemDot9" data-img="9" data-tab="3">
                            3
                            <!-- <i class="ion-ios-person-outline"></i> -->
                            <span class="forActive"></span>
                            </span>
-                           <span class="itemDot itemDot10" data-tab="10">
+                           <span class="itemDot itemDot10" data-img="10" data-tab="4">
                            4
                            <!-- <i class="ion-ios-pricetags-outline"></i> -->
                            <span class="forActive"></span>
                            </span>
-                           <span class="itemDot itemDot11" data-tab="11">
+                           <span class="itemDot itemDot11" data-img="11" data-tab="5">
                            5
                            <!-- <i class="ion-ios-upload-outline"></i> -->
                            <span class="forActive"></span>
                            </span>
-                           <span class="itemDot itemDot12" data-tab="12">
+                           <span class="itemDot itemDot12" data-img="12" data-tab="6">
                            6
                            <!-- <i class="ion-ios-briefcase-outline"></i> -->
                            <span class="forActive"></span>
                            </span>
                         </div>
                         <div class="contentCircle">
-                           <div class="CirItem title-box active CirItem7">
+                           <div class="CirItem title-box active CirItem1">
                               <h2 class="title"><span>Automated Order Tracking</span></h2>
                               <!-- <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> -->
                               <!-- <i class="ion-ios-timer-outline"></i> -->
                            </div>
-                           <div class="CirItem title-box CirItem8">
+                           <div class="CirItem title-box CirItem2">
                               <h2 class="title"><span>On-Demand FAQs</span></h2>
                               <!-- <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> -->
                               <!-- <i class="ion-ios-chatboxes-outline"></i> -->
                            </div>
-                           <div class="CirItem title-box CirItem9">
+                           <div class="CirItem title-box CirItem3">
                               <h2 class="title"><span>Live Agent Transfer</span></h2>
                               <!-- <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> -->
                               <!-- <i class="ion-ios-person-outline"></i> -->
                            </div>
-                           <div class="CirItem title-box CirItem10">
+                           <div class="CirItem title-box CirItem4">
                               <h2 class="title"><span>Order Modifications</span></h2>
                               <!-- <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> -->
                               <!-- <i class="ion-ios-pricetags-outline"></i> -->
                            </div>
-                           <div class="CirItem title-box CirItem11">
+                           <div class="CirItem title-box CirItem5">
                               <h2 class="title"><span>Order Cancellations</span></h2>
                               <!-- <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> -->
                               <!-- <i class="ion-ios-upload-outline"></i> -->
                            </div>
-                           <div class="CirItem title-box CirItem12">
+                           <div class="CirItem title-box CirItem6">
                               <h2 class="title"><span>Qualified Order Refunds</span></h2>
                               <!-- <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> -->
                               <!-- <i class="ion-ios-briefcase-outline"></i> -->
