Improved support content

--- a/support.html
+++ b/support.html
@@ -91,12 +91,12 @@ layout: page
                               <!-- <i class="ion-ios-timer-outline"></i> -->
                            </div>
                            <div class="CirItem title-box CirItem2">
-                              <h2 class="title"><span>On-Demand FAQs</span></h2>
+                              <h2 class="title"><span>Instant Response Times</span></h2>
                               <!-- <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> -->
                               <!-- <i class="ion-ios-chatboxes-outline"></i> -->
                            </div>
                            <div class="CirItem title-box CirItem3">
-                              <h2 class="title"><span>Live Agent Transfer</span></h2>
+                              <h2 class="title"><span>Smart Escalation to Agents</span></h2>
                               <!-- <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> -->
                               <!-- <i class="ion-ios-person-outline"></i> -->
                            </div>
