--- a/faq.html
+++ b/faq.html
@@ -33,10 +33,10 @@ layout: page
                   <div class="col-sm-12">
                   	<div class="text-center">
                       <div class="title-box">
-                    		<h2>You have <span> Questions? </span></h2>
+                    		<h2><span>Frequently Asked  Questions</span></h2>
                       </div>
                   		<p>
-                  			And we get to answer them all
+                  			We will be happy to answer them 😄
                   		</p>
                   	</div>
                   	<div class="text-center">
@@ -44,29 +44,29 @@ layout: page
                         <div class="card">
                           <div class="card-header" id="headingOne">
                             <h2 class="mb-0">
-                              <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                Collapsible Group Item #1
+                              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                What minimum size do I need to be to benefit from chat automation?
                               </button>
                             </h2>
                           </div>
 
-                          <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                          <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
                             <div class="card-body">
-                              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                              Chat automation typically adds the most value if you get at least 50 inbound queries per day. Successful D2C brands typically scale very fast, and it makes a lot of sense to leverage chat automation to scale your sales and support instead of adding people to your team linearly.
                             </div>
                           </div>
                         </div>
                         <div class="card">
                           <div class="card-header" id="headingTwo">
                             <h2 class="mb-0">
-                              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                Collapsible Group Item #2
+                              <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                Do you help in WhatsApp automation?
                               </button>
                             </h2>
                           </div>
-                          <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                          <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#accordionExample">
                             <div class="card-body">
-                              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                              We help you in getting an API for WhatsApp automation (either the official WhatsApp business API or an alternative called Chat API). We help you provide a complete buying experience right on WhatsApp, as well as automate support queries. We also help you aggregate them into a single dashboard so that multiple agents can respond to them.
                             </div>
                           </div>
                         </div>
@@ -74,13 +74,13 @@ layout: page
                           <div class="card-header" id="headingThree">
                             <h2 class="mb-0">
                               <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                Collapsible Group Item #3
+                                What is the typical setup time before I can see results?
                               </button>
                             </h2>
                           </div>
                           <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                             <div class="card-body">
-                              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                              We take only 1 day to setup support automation and 3-4 days to setup sales automation. You will be able to see increased conversions and automation in 1-2 weeks.
                             </div>
                           </div>
                         </div>
