Added hacky about us content

--- a/about-us.html
+++ b/about-us.html
@@ -43,8 +43,8 @@ layout: page
                                  <div class="title-box">
                                     <h2 class="title-light text-dark">About <span>LimeChat</span></h2>
                                  </div>
-                                 <p class="mt-4"><strong>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</strong></p>
-                                 <p class="mt-4">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
+                                 <p class="mt-4"><strong>Limechat was started by AI experts from IIT Delhi, CMU and MIT, who talked to 100+ global D2C brands to figure out their pain points, and tried to leverage their expertise in NLP to tackle those problems.</strong></p>
+                                 <p class="mt-4">Our product was developed after months of extensive experimentation and feedback from 10+ D2C brands. Our NLP expertise and deep focus on the D2C domain helped us develop the exact right product to solve problems faced by more than 100k+ D2C brands globally.</p>
                               </div>
                               <div class="col-lg-6 col-md-12 r-mt3">
                                  <img class="img-fluid" src="images/about/1.svg" alt="image">
@@ -55,13 +55,13 @@ layout: page
                                  <div class="title-box">
                                     <h3 class="title-light text-dark">The Long Term <span>Vision</span></h3>
                                  </div>
-                                 <p class="mt-2">It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
-                                 <ul class="iq-list mt-4">
+                                 <p class="mt-2">To help build the future of conversational and social commerce.</p>
+                                 <!-- <ul class="iq-list mt-4">
                                     <li class="mt-4">There are many variations of passages of Lorem Ipsum available.</li>
                                     <li class="mt-4">The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.</li>
-                               </ul>
+                                 </ul> -->
                               </div>
-                              <div class="col-lg-6 col-md-12 mt-5">
+                              <!-- <div class="col-lg-6 col-md-12 mt-5">
                                  <div class="title-box">
                                     <h3 class="title-light text-dark">Company <span>Values</span></h3>
                                  </div>
@@ -70,7 +70,7 @@ layout: page
                                     <li class="mt-4">There are many variations of passages of Lorem Ipsum available.</li>
                                     <li class="mt-4">The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.</li>
                                    </ul>
-                              </div>
+                              </div> -->
                             </div>
                         </div>
                         <div id="team" class="text-center">
