SEO Screenshot center and cookie remove

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ layout: page
                     <div class="works-box">
                         <img class="img-fluid top-bg" src="images/works/work-bg.png" alt="image" />
                         <img class="img-fluid works-img1" src="images/works/works-img1.png" alt="image" />
-                        <img class="img-fluid top-img1 i-size" src="images/banner/2.png" alt="image" />
+                        <img class="img-fluid top-img1 i-size" src="images/banner/3.png" alt="image" />
                     </div>
                 </div>
             </div>
@@ -248,5 +248,12 @@ layout: page
         .main-banner{
             min-height: 600px;
         }
+
     }
+    @media(max-width:600px) {
+        .works-box .top-img1{
+            margin-left: 20%;
+        }
+    }
+
 </style>
