--- a/sales.html
+++ b/sales.html
@@ -36,7 +36,9 @@ layout: page
                         <h5 class="title text-dark"><span>Loyal Customers</span></h5>
                      </div>
                      <p class="mt-4">Increase Sales Revenues by 20% by Leveraging Chat</p>
-                     <a class="button grey mt-2" href="#" role="button">Schedule a Demo</a>
+                     <div class="cta-button">
+                        <a class="button grey mt-2" href="#" role="button">Schedule a Demo</a>
+                     </div>
                   </div>
                   <div class="col-lg-6 col-md-12 mt-5">
                      <img class="img-fluid top-img1 w-100" src="images/features/1.svg" alt="image">
@@ -44,10 +46,10 @@ layout: page
                </div>
                <div class="row align-items-center features-chatbot mt-5">
                   <div class="col-12 order-lg-2 order-2 mt-5 pt-5">
-                     <div class="title-box">
+                     <div class="title-box text-left">
                         <h2 class="title-light text-dark">Guide Users Through Each Step of the <span>Pre-Purchase Journey</span> using our <span>Chatbot</span></h2>
                      </div>
-                     <p class="mt-4">Check out how we reduce drop-offs at each step of the user journey</p>
+                     <p class="mt-4 text-left">Check out how we reduce drop-offs at each step of the user journey</p>
                   </div>
                </div>
                <div class="row align-items-center" style="overflow: hidden;">
@@ -131,11 +133,11 @@ layout: page
                <h1>Over 10,000 Purchases Handled</h1>
                <!-- <p class="mt-2">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> -->
                <div class="row mt-5">
-                  <div class="col-md-4">
+                  <div class="col-md-4 mb-5 mb-md-0">
                      <h1>20+</h1>
                      <h3>Enterprise Clients</h3>
                   </div>
-                  <div class="col-md-4">
+                  <div class="col-md-4 mb-5 mb-md-0">
                      <h1>>15%</h1>
                      <h3>Boost in Conversions</h3>
                   </div>
@@ -155,7 +157,7 @@ layout: page
                      </div>
                   </div>
                   <div class="col-lg-12 col-md-12 mt-5 mb-5 text-center">
-                     <img class="img-fluid top-img1 w-50" src="images/works/channels.png" alt="image">
+                     <img class="img-fluid top-img1 w-50 mobile-img-100" src="images/works/channels.png" alt="image">
                   </div>
                </div>
                <div class="row justify-content-md-center">
@@ -165,7 +167,7 @@ layout: page
                      </div>
                   </div>
                   <div class="col-lg-12 col-md-12 mt-5 text-center">
-                     <img class="img-fluid top-img1 w-75" src="images/works/integrations.png" alt="image">
+                     <img class="img-fluid top-img1 w-75 mobile-img-100" src="images/works/integrations.png" alt="image">
                   </div>
                   <div class="col-sm-12    title-box mt-3 text-center">
                      <h3 class="title-light text-dark">along with so <span> many more!</span></h3>
@@ -186,7 +188,7 @@ layout: page
               <div class="row justify-content-md-center">
                   <div class="col-lg-8 col-sm-12 text-center">
                       <div>
-                          <a class="button" href="contact-us.html">Schedule a Demo</a>
+                          <a class="button" href="contact-us.php">Schedule a Demo</a>
                       </div>
                   </div>
               </div>
@@ -200,34 +202,3 @@ layout: page
       </div>
       <!--=================================
          MAIN CONTENT -->
-
-
-<style type="text/css">
-
-   @media(min-width:600px) {
-      .CirItem h2{
-         /*height: 400px;*/
-         /*border: 1px solid black;  */
-         margin-top: 35px;
-         display: flex;
-         align-items: center;
-         justify-content: center;   
-      }
-   }
-   @media(max-width:600px) {
-      .CirItem h2{
-         /*border: 1px solid black;*/
-         /*height: inherit;*/
-         margin-top: -30px;
-         font-size: 15px;
-         max-width: 150px;
-         margin-left: auto;
-         margin-right: auto;
-         line-height: 30px;
-      }
-   }
-
-
-
-
-</style>
