--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: page
             <div class="row">
                 <div class="col-lg-5 col-md-12 col-sm-12">
                     <!-- TODO: Cycle between whatsapp, facebook, instagram, website chat -->
-                    <h1 class="text-uppercase">Convert any chat medium into a sales channel</h1>
+                    <h1 class="text-uppercase" style="margin-top: 90px;">Convert any chat medium into a sales channel</h1>
                     <h3 class="mt-4">Address pre-purchase concerns and complete checkout on chat using AI </h3>
                     <div class="form-row align-items-center justify-content-lg-start justify-content-center">
                         <!-- <div class="col-auto">
@@ -17,7 +17,7 @@ layout: page
                         </div> -->
                         <div class="col-auto text-right">
                           <ul class="login">
-                             <li class="d-inline active" style="margin-left: 0;"><a href="contact-us.html">Show me how</a></li>
+                             <li class="d-inline active" style="margin-left: 0;"><a href="contact-us.php">Show me how</a></li>
                           </ul>
                        </div>
                     </div>
@@ -180,7 +180,7 @@ layout: page
         <div class="row justify-content-md-center">
             <div class="col-lg-8 col-sm-12 text-center">
                 <div>
-                    <a class="button" href="contact-us.html">Schedule a Demo</a>
+                    <a class="button" href="contact-us.php">Schedule a Demo</a>
                 </div>
             </div>
         </div>
