--- a/technology.html
+++ b/technology.html
@@ -34,7 +34,9 @@ layout: page
 								<h5 class="title text-dark">Unprecedented <span>Human-Like</span> Conversations</h5>
 							</div>
 							<p class="mt-4">Powered by First-of-its-kind Level 3 Conversational AI</p>
-							<a class="button grey mt-2" href="#" role="button">Get Demo</a>
+							<div class="cta-button">
+								<a class="button grey mt-2" href="#" role="button">Get Demo</a>
+							</div>
 						</div>
 						<div class="col-lg-6 col-md-12 mt-5">
 							<img class="img-fluid top-img1 w-100" src="images/tech/1.svg" alt="image">
@@ -207,8 +209,9 @@ layout: page
 							<p>A side-by-side comparison with Level 2 AI</p>
 						</div>
 					</div>
-					<div class="col-sm-12 mt-5">
-						<img src="images/tech/2.png" class="img-fluid mb-4" alt="" />
+					<div class="col-sm-12 mt-5 mt-md-0" style="display: flex; align-items: center; justify-content: center; flex-wrap: wrap;">
+						<img src="images/tech/7.png" class="img-fluid mb-4 mobile-img-100" alt="" style="width: 40%;" />
+						<img src="images/tech/8.png" class="img-fluid mb-4 mobile-img-100" alt="" style="width: 60%;" />
 					</div>
 					<!-- <div class="row mt-5">
 						<div class="col-sm-12">
