Final styling fixes and chat image enhancements

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ layout: page
                         <img class="img-top" src="images/logos/y-combinator.png" height="40">
                     </div>
                 </div>
-                <div class="col-lg-7 col-md-12 col-sm-12 text-right main-banner" >
-                    <img class="img-fluid banner-img" src="images/banner/cover.png" alt="image" />
+                <div class="col-lg-7 col-md-12 col-sm-12 text-right main-banner mt-5" >
+                    <img class="img-fluid banner-img" src="images/banner/cover.svg" alt="image" />
                 </div>
             </div>
         </div>
@@ -86,9 +86,9 @@ layout: page
                         <li class="mt-2"><i class="fas fa-check-circle"></i>Up-Selling and Cross-Selling to Increase Order Value</li>
                         <li class="mt-2"><i class="fas fa-check-circle"></i>Complete Checkout and Payment on Chat to Minimize Drop-Offs</li>
                     </ul>
-                    <a class="button grey mt-2" href="/sales.html" role="button">Know More</a>
+                    <a class="button grey mt-4" href="/sales.html" role="button">Know More</a>
                 </div>
-                <div class="col-lg-6 col-sm-12">
+                <div class="col-lg-6 col-sm-12 mt-5">
                     <div class="works-box">
                         <img class="img-fluid top-bg" src="images/works/work-bg.png" alt="image" />
                         <img class="img-fluid works-img1" src="images/works/works-img1.png" alt="image" />
@@ -109,9 +109,9 @@ layout: page
                         <li class="mt-2"><i class="fas fa-check-circle"></i>Handle Order Cancellations and Modifications</li>
                         <li class="mt-2"><i class="fas fa-check-circle"></i>Handle or Escalate Refund Requests</li>
                     </ul>
-                    <a class="button grey mt-2" href="/support.html" role="button">Know More</a>
+                    <a class="button grey mt-4" href="/support.html" role="button">Know More</a>
                 </div>
-                <div class="col-lg-6 col-sm-12 order-lg-1 order-2">
+                <div class="col-lg-6 col-sm-12 order-lg-1 order-2 mt-5">
                     <div class="works-box">
                         <img class="img-fluid top-bg" src="images/works/work-bg.png" alt="image" />
                         <img class="img-fluid works-img1" src="images/works/works-img1.png" alt="image" />
@@ -134,7 +134,7 @@ layout: page
                     </ul>
                     <!-- <a class="button grey mt-2" href="/features.html" role="button">Know More</a> -->
                 </div>
-                <div class="col-lg-6 col-sm-12">
+                <div class="col-lg-6 col-sm-12 mt-5">
                     <div class="works-box">
                         <img class="img-fluid top-bg" src="images/works/work-bg.png" alt="image" />
                         <img class="img-fluid works-img1" src="images/works/works-img1.png" alt="image" />
