--- a/sales.html
+++ b/sales.html
@@ -46,10 +46,10 @@ layout: page
                </div>
                <div class="row align-items-center features-chatbot mt-5">
                   <div class="col-12 order-lg-2 order-2 mt-5 pt-5">
-                     <div class="title-box text-left">
+                     <div class="title-box">
                         <h2 class="title-light text-dark">Guide Users Through Each Step of the <span>Pre-Purchase Journey</span> using our <span>Chatbot</span></h2>
                      </div>
-                     <p class="mt-4 text-left">Check out how we reduce drop-offs at each step of the user journey</p>
+                     <p class="mt-4">Check out how we reduce drop-offs at each step of the user journey</p>
                   </div>
                </div>
                <div class="row align-items-center" style="overflow: hidden;">
@@ -87,6 +87,11 @@ layout: page
                            <!-- <i class="ion-ios-briefcase-outline"></i> -->
                            <span class="forActive"></span>
                            </span>
+                           <span class="itemDot itemDot7" data-tab="7" data-img="7">
+                           7
+                           <!-- <i class="ion-ios-briefcase-outline"></i> -->
+                           <span class="forActive"></span>
+                           </span>
                         </div>
                         <div class="contentCircle">
                            <div class="CirItem title-box active CirItem1">
@@ -105,16 +110,21 @@ layout: page
                               <!-- <i class="ion-ios-person-outline"></i> -->
                            </div>
                            <div class="CirItem title-box CirItem4">
-                              <h2 class="title"><span>Cross Sell & Up Sell</span></h2>
+                              <h2 class="title"><span>Personalised Cross Selling</span></h2>
                               <!-- <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> -->
                               <!-- <i class="ion-ios-pricetags-outline"></i> -->
                            </div>
                            <div class="CirItem title-box CirItem5">
-                              <h2 class="title"><span>Show Social Proof</span></h2>
+                              <h2 class="title"><span>Personalised Up Selling</span></h2>
                               <!-- <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> -->
                               <!-- <i class="ion-ios-upload-outline"></i> -->
                            </div>
                            <div class="CirItem title-box CirItem6">
+                              <h2 class="title"><span>Show Social Proof</span></h2>
+                              <!-- <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> -->
+                              <!-- <i class="ion-ios-briefcase-outline"></i> -->
+                           </div>
+                           <div class="CirItem title-box CirItem7">
                               <h2 class="title"><span>Qualify Potential Leads</span></h2>
                               <!-- <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> -->
                               <!-- <i class="ion-ios-briefcase-outline"></i> -->
@@ -129,7 +139,7 @@ layout: page
             </div>
          </section>
          <section class="container-fluid" style="padding: 0;">
-            <div class="features-projects-completed mt-5">
+            <div class="features-projects-completed mt-5 pt-5 pb-5">
                <h1>Over 10,000 Purchases Handled</h1>
                <!-- <p class="mt-2">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> -->
                <div class="row mt-5">
