--- a/support.html
+++ b/support.html
@@ -29,7 +29,7 @@ layout: page
          <section class="half-margin">
             <div class="container">
                <div class="row align-items-center features-demo">
-                  <div class="col-lg-6 col-md-12">
+                  <div class="col-lg-6 col-md-12 mt-5">
                      <div class="title-box">
                         <h5 class="title text-dark">Deliver <span>Delightful</span> Customer Experiences</h5>
                      </div>
@@ -44,10 +44,10 @@ layout: page
                </div>
                <div class="row align-items-center features-chatbot mt-5">
                   <div class="col-12 order-lg-2 order-2 mt-5 pt-5">
-                     <div class="title-box text-left">
+                     <div class="title-box">
                         <h2 class="title-light text-dark">Deliver <span>Quick and Delightful</span> Customer Experiences at Scale using our <span>Chatbot.</span></h2>
                      </div>
-                     <p class="mt-4 text-left">Check out how we automatically handle different customer support queries</p>
+                     <p class="mt-4">Check out how we automatically handle different customer support queries</p>
                   </div>
                </div>
                <div class="row align-items-center" style="overflow: hidden;">
@@ -55,32 +55,32 @@ layout: page
                      <div class="holderCircle">
                         <div class="round"></div>
                         <div class="dotCircle">
-                           <span class="itemDot active itemDot7" data-img="7" data-tab="1">
+                           <span class="itemDot active itemDot8" data-img="8" data-tab="1">
                            1
                            <!-- <i class="ion-ios-timer-outline"></i> -->
                            <span class="forActive"></span>
                            </span>
-                           <span class="itemDot itemDot8" data-img="8" data-tab="2">
+                           <span class="itemDot itemDot9" data-img="9" data-tab="2">
                            2
                            <!-- <i class="ion-ios-chatboxes-outline"></i> -->
                            <span class="forActive"></span>
                            </span>
-                           <span class="itemDot itemDot9" data-img="9" data-tab="3">
+                           <span class="itemDot itemDot10" data-img="10" data-tab="3">
                            3
                            <!-- <i class="ion-ios-person-outline"></i> -->
                            <span class="forActive"></span>
                            </span>
-                           <span class="itemDot itemDot10" data-img="10" data-tab="4">
+                           <span class="itemDot itemDot11" data-img="11" data-tab="4">
                            4
                            <!-- <i class="ion-ios-pricetags-outline"></i> -->
                            <span class="forActive"></span>
                            </span>
-                           <span class="itemDot itemDot11" data-img="11" data-tab="5">
+                           <span class="itemDot itemDot12" data-img="12" data-tab="5">
                            5
                            <!-- <i class="ion-ios-upload-outline"></i> -->
                            <span class="forActive"></span>
                            </span>
-                           <span class="itemDot itemDot12" data-img="12" data-tab="6">
+                           <span class="itemDot itemDot13" data-img="13" data-tab="6">
                            6
                            <!-- <i class="ion-ios-briefcase-outline"></i> -->
                            <span class="forActive"></span>
@@ -127,7 +127,7 @@ layout: page
             </div>
          </section>
          <section class="container-fluid" style="padding: 0;">
-            <div class="features-projects-completed mt-5">
+            <div class="features-projects-completed mt-5 pt-5 pb-5">
                <h1>Over 10,000 Support Messages Automated</h1>
                <!-- <p class="mt-2">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> -->
                <div class="row mt-5">
