--- a/technology.html
+++ b/technology.html
@@ -29,7 +29,7 @@ layout: page
 			<section class="half-margin">
 				<div class="container">
 					<div class="row align-items-center features-demo">
-						<div class="col-lg-6 col-md-12">
+						<div class="col-lg-6 col-md-12 mt-5">
 							<div class="title-box">
 								<h5 class="title text-dark">Unprecedented <span>Human-Like</span> Conversations</h5>
 							</div>
@@ -69,7 +69,7 @@ layout: page
 					</div>
 				</div>
 				<div class="container mt-5">
-					<div class="row">
+					<div class="row flex-column-reverse flex-md-row">
 						<div class="col-md-6 align-self-center">
 							<div class="ml-3 mt-3">
 								<h3>Natural Language Understanding (NLU)</h3>
@@ -106,7 +106,7 @@ layout: page
                   <div class="row">
                      <div class="col-sm-12">
                         <div class="title-box">
-                           <h1 class="title">What is a Level 3 AI Chatbot?</h1>
+                           <h2 class="title">What is a <span>Level 3 AI Chatbot?</span></h2>
                            <p>Level 3 chatbots can understand context.</p>
                          </div>
                      </div>
@@ -210,8 +210,8 @@ layout: page
 						</div>
 					</div>
 					<div class="col-sm-12 mt-5 mt-md-0" style="display: flex; align-items: center; justify-content: center; flex-wrap: wrap;">
-						<img src="images/tech/7.png" class="img-fluid mb-4 mobile-img-100" alt="" style="width: 40%;" />
-						<img src="images/tech/8.png" class="img-fluid mb-4 mobile-img-100" alt="" style="width: 60%;" />
+						<img src="images/tech/7.png" class="img-fluid mb-4 mobile-img-100" alt="" style="width: 50%;" />
+						<img src="images/tech/8.png" class="img-fluid mb-4 mobile-img-100" alt="" style="width: 50%;" />
 					</div>
 					<!-- <div class="row mt-5">
 						<div class="col-sm-12">
