--- a/support.html
+++ b/support.html
@@ -35,7 +35,7 @@ layout: page
                      </div>
                      <p class="mt-4">While Automating 70% of Customer Support Queries</p>
                      <div class="cta-button">
-                        <a class="button grey mt-2" href="#" role="button">Schedule a Demo</a>
+                        <a class="button grey mt-2" href="contact-us.php" role="button">Schedule a Demo</a>
                      </div>
                   </div>
                   <div class="col-lg-6 col-md-12 mt-5">
